# Larmo

./: .gitignore  .gitmodules  BigNum.cpp  CertExchangeServer.cpp  CertExchangeServer.h  ClientContexts.h  CommandPlay.cpp  Config.cpp  Config.h  Daemon.cpp  Daemon.h  Doxyfile  GrpcCallAuthenticator.cpp  GrpcCallAuthenticator.h  PlaybackState.cpp  PlaybackState.h  PlaybackSynchronizer.cpp  PlaybackSynchronizer.h  Player.cpp  Player.h  PlayerClient.cpp  PlayerClient.h  PlayerService.h  PlayerServiceImpl.cpp  PlayerServiceImpl.h  README.org  SPEKE.cpp  SPEKE.h  SongInfo.h  SongInfoUpdater.cpp  SongInfoUpdater.h  TempFile.cpp  TempFile.h  Util.cpp  Util.h  cert_messages.proto  cppcheck.sh  daemon_arguments.proto  emms-player-lrm.el  filesystem.h  (+6 more)
crypto/: BigNum.cpp  BigNum.h  Certificate.cpp  Certificate.h  CryptoUtil.cpp  CryptoUtil.h  CryptoUtil.tpp  EddsaKeyPair.cpp  KeyPairBase.cpp  KeyPairBase.h  RsaCertificate.cpp  RsaCertificate.h  RsaKeyPair.cpp  RsaKeyPair.h  SPEKE.cpp  SPEKE.h  SPEKE.proto  SpekeInterface.h  SpekeSession.cpp  SpekeSession.h  SslUtil.cpp  SslUtil.h  ZkpSerialization.cpp  ZkpSerialization.h  certs.cpp  certs.h  config.h
crypto/certs/: Certificate.cpp  Certificate.h  CertificateAuthority.cpp  CertificateAuthority.h  CertificateRequest.cpp  CertificateRequest.h  CertsUtil.cpp  CertsUtil.h  EddsaKeyPair.cpp  EddsaKeyPair.h  KeyPair.cpp  KeyPair.h  KeyPairBase.cpp  KeyPairBase.h  RsaKeyPair.cpp  RsaKeyPair.h
docker/player/: Dockerfile  build-image.sh  start-container.sh
test/: main.cpp  test-BigNum.cpp  test-CertExchangeServer.cpp  test-CryptoUtil.cpp  test-KeyPair.cpp  test-SPEKE.cpp  test-SpekeSession.cpp  test-certs.cpp
